<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!--  -->
    <string name="title_activity_paitentscreen">PaitentscreenActivity</string>
    <string name="patient_screen">Patient Screen</string>
    <string name="test_name">Test Name</string>
    <string name="here_are_you_list_of_clients">Here are your list of clients/Aquí tienes una lista de tus clientes:</string>
    <string name="random_name">Random Name</string>
    <string name="spinner_name">Spinner Name</string>
    <string name="lessons">Lessons</string>
    <string-array name="names_array">
        <item>Mike</item>
        <item>Vinny</item>
        <item>Emily</item>
        <item>Mia</item>
        <item>John</item>
    </string-array>
    <string name="to_settings_page">Lessons</string>
    <string name="to_awards_page">Lessons</string>
    <string name="to_p_sounds_page">Lessons</string>
    <string name="to_k_sounds_page">Lessons</string>
    <string name="to_t_sounds_page">Lessons</string>
    <string name="to_l_sounds_page">Lessons</string>
    <string name="please_select_a_sound_you_want_to_start_with">Please select a sound to practice:</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="title_activity_emailupload">emailupload</string>

    <string name="email_edittext">Enter email here</string>
    <string name="email_subject">Subject</string>
    <string name="email_body">Body</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_name_test_please_help">Mike</string>
</resources>