<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0072D7"
    tools:context=".patientscreen">

    <TextView
        android:id="@+id/testname8"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chango"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <CheckedTextView
        android:id="@+id/checkedTextView5"
        android:layout_width="184dp"
        android:layout_height="49dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/chango"
        android:text="L Sounds Completed"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <CheckedTextView
        android:id="@+id/checkedTextView3"
        android:layout_width="184dp"
        android:layout_height="49dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="@font/chango"
        android:text="T Sounds Completed"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkedTextView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/chango"
        android:text="@string/patient_screen"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="324dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/chango"
        android:text="@string/here_are_you_list_of_clients"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />


    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="184dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/chango"
        android:text="K Sounds Completed"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkedTextView4" />

    <TextView
        android:id="@+id/client_username"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:fontFamily="@font/chango"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <TextView
        android:id="@+id/test_name"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="15dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chango"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/client_name"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:fontFamily="@font/chango"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <TextView
        android:id="@+id/test_name3"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chango"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/client_username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <CheckedTextView
        android:id="@+id/checkedTextView4"
        android:layout_width="184dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/chango"
        android:text="P Sounds Completed"
        android:textColor="@color/white"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_username" />


    <TextView
        android:id="@+id/testname6"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chango"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:id="@+id/testname7"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chango"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/testname5"
        android:layout_width="155dp"
        android:layout_height="53dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chango"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_name3"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/search"
        android:layout_width="219dp"
        android:layout_height="59dp"
        android:layout_marginEnd="32dp"
        android:hint="Search Here"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="97dp"
        android:layout_height="59dp"
        android:layout_marginEnd="32dp"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

</androidx.constraintlayout.widget.ConstraintLayout>